# sc-core

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  COPYING  README  README.rst
docs/: CMakeLists.txt  install.html  license.html  readme.html  sc-core.doxyfile.in  style.css
docs/images/: CONSTR_ORD_BIN_CONN1.gwf
docs/p15/: P15_Example_call_1.gwf  P15_Example_genElStr3_1.gwf  P15_Example_genElStr3_1_after.gwf  P15_Example_genEl_1.gwf  P15_Example_genEl_1_after.gwf  P15_Example_ifCoin_1.gwf  P15_Example_ifType_1.gwf  P15_Example_ifType_2.gwf  P15_Example_varAssign_1.gwf  P15_Example_varAssign_1_after.gwf  P15_Example_waitReturn_1.gwf  P15_evaluateSetPower_scg.gwf  P15_evaluateSetPower_scg_example_usage_1.gwf
docs/p15/change/: P15_Example_varAssign_1.gwf  P15_Example_varAssign_1_after_1.gwf
docs/p15/erase/: P15_Example_eraseElStr3_1.gwf  P15_Example_eraseElStr3_1_after_2.gwf  P15_Example_eraseElStr3_1_before_2.gwf  P15_Example_eraseElStr3_2.gwf  P15_Example_eraseElStr3_2_after.gwf  P15_Example_eraseElStr3_2_before.gwf  P15_Example_eraseElStr3_2_before_2.gwf  P15_Example_eraseEl_1.gwf  P15_Example_eraseSetStr3_1.gwf  P15_Example_eraseSetStr3_1_after.gwf  P15_Example_eraseSetStr3_1_before.gwf
docs/p15/search/: P15_Example_searchElStr3_1.gwf  P15_Example_searchElStr3_1_after_1.gwf  P15_Example_searchElStr3_1_before_2.gwf  P15_Example_searchElStr3_2.gwf  P15_Example_searchElStr3_2_after_2.gwf  P15_Example_searchSetStr3_1.gwf  P15_Example_searchSetStr3_1_before_2.gwf
docs/p15/select/: P15_Example_selectNStr3_1.gwf  P15_Example_selectNStr3_1_after_2.gwf  P15_Example_selectNStr3_1_before_1.gwf  P15_Example_selectNStr3_1_before_2.gwf
docs/sc_code_in_examples/: .gitignore  Bin_ord_pair.gwf  Bin_ord_tuple.gwf  Bin_unord_pair.gwf  Bin_unord_tuple.gwf  Complex_sets_example.gwf  El_fuzzy_in_set.gwf  El_in_set.gwf  El_not_in_set.gwf  Relation.gwf  SC_code_example.gwf  SC_code_example_connectors.gwf  SC_code_example_nodes.gwf  Set.gwf  Tuple.gwf  Tuple_with_custom_attrs.gwf  Very_complex_sets_example.gwf  basic.tex  graphs_theory.tex  intro.tex  sc_code_in_examples.tex  sc_core_in_examples.tex
docs/sc_code_in_examples/basic/: Absolute_concept_Complex_number.gwf  Absolute_concept_Number.gwf  Bus_example.gwf  Complex_sets_example.gwf  Contour_example.gwf  El_fuzzy_in_set.gwf  El_in_set.gwf  El_not_in_set.gwf  Relation.gwf  Relation_Inclusion_and_Strict_inclusion.gwf  Relation_Intersection.gwf  Relation_Partition.gwf  Relation_union.gwf  Relation_with_bin_ord_pairs.gwf  Relational_concept_Greater.gwf  Set.gwf  Tuple_with_custom_attrs.gwf  Very_complex_sets_example.gwf
docs/sc_code_in_examples/graph_theory/: Directed_graph.gwf  Directed_graph_no_scg.gwf  Example_of_relations_Route_tuple.gwf  Graph_structure_example.gwf  Hierarchy_of_elements_roles_in_graph_structure.gwf  Hierarchy_of_graphs_types.gwf  Path_example_no_scg.gwf  Path_final.gwf  Relation_Correspondece_example.gwf  Relation_Subgraph_example.gwf  Relations_Trail_Path.gwf  Route_as_correspondence_final.gwf  Route_as_correspondence_incomplete.gwf  Route_as_sequence.gwf  Route_as_subgraph.gwf  Route_as_subgraph_problem.gwf  Undirected_graph_classic.gwf  Undirected_graph_main.gwf  Undirected_graph_no_scg.gwf  (+4 more)
examples/ext_dynmod/: CMakeLists.txt  CMakeLists.txt.in
examples/wave_find_path/: CMakeLists.txt  CMakeLists.txt.in  wave_find_path.cpp
libpm/: CMakeLists.txt
libpm/libpm/: config.h  libpm_precompiled_p.cpp  libpm_precompiled_p.h  logging.h  main.cpp  pm.h  pm_ext_program.cpp  pm_ext_program.h  pm_process.cpp  pm_process.h  pm_sched.cpp  pm_sched.h  pm_wait.cpp  pm_wait.h  sc_operation.cpp  sc_operation.h  sleeping_activity.cpp  sleeping_activity.h  transaction.h
libpm/libpm/nsm/: nsm.h  (+16 more)
librgp/: CMakeLists.txt
librgp/librgp/: config.h  io_p.h  precompiled_p.h  rgp.cpp  rgp.h  rgp_command.cpp  rgp_command_p.h  rgp_connection.cpp  rgp_connection_p.h  rgp_log_p.h  rgp_objs_registry_p.h  rgp_server.cpp  rgp_server.h
libsc/: CMakeLists.txt
libsc/libsc/: abort.cpp  abort.h  advanced_activity.cpp  advanced_activity.h  base_iterators_p.h  config.h  content_index.cpp  content_index_p.h  custom_iters.cpp  custom_iters_p.h  event_stream.h  fallback.cpp  fixalloc.cpp  fixalloc.h  gen_std_constraints.rb  idtf_gen.cpp  idtf_gen.h  libsc.h  numbers_segment.cpp  numbers_segment_p.h  pm_keynodes.cpp  pm_keynodes.h  precompiled_p.h  repository_p.h  safe_list_p.h  sc_addr.h  sc_assert.h  sc_atoms.cpp  sc_atoms.h  sc_change_utils.cpp  sc_change_utils.h  sc_constraint.cpp  sc_constraint.h  sc_content.cpp  sc_content.h  sc_core.cpp  sc_core_p.h  sc_event.h  sc_event_multi.cpp  sc_event_multi.h  (+47 more)
libsc/test/: find_by_content.cpp
libsc/utils/: constrc.py  gen_constr.pl  gen_type_table.py
libscc/: CMakeLists.txt
libscc/libscc/: SCPs.g  antlr3_scc_utils.cpp  antlr3_scc_utils.h  antlr3stdinstream.cpp  config.h  libscc.h  names_scope.cpp  names_scope.h  precompiled_p.h  scps_compiler.cpp  scps_compiler.h  scps_complex_structure.h  scps_cond_block.h  scps_language.cpp  scps_language.h  scps_lexer.cpp  scps_lexer.h  scps_operator.cpp  scps_operator.h  scps_program.cpp  scps_program.h  scs_language.cpp  scs_language.h
libscc/test/: content.txt  content_sentence.scs  general_sc_arc.scs  include_test.scs  include_test.scsy  scsentence.scs  scsentence_in_system.scs
libsys/: CMakeLists.txt
libsys/libsys/: concurrent.cpp  concurrent.h  context.h  libsys.h  unix-sysv-context.c  win32-nt4-context.cpp  win32-nt4-context.h
libtgf/: CMakeLists.txt
libtgf/libtgf/: bytesex_p.h  tgf.c  tgf.h  tgfalloc.c  tgfalloc.h  tgfdebug_p.h  tgfin.c  tgfin.h  tgfio_unix.c  tgfmachine.h  tgfmap.c  tgfmap.h  tgfout.c  tgfout.h  tgfutil_p.h
tools/dumptgf/: CMakeLists.txt  dumptgf.c  dumptgf.cpp  dumptgf2.c  eret.h
tools/m4scp/: CMakeLists.txt  m4scp.m4  m4scp2scs.bat  m4scp2tgf.bat
tools/pmc/: CMakeLists.txt  pmc.cpp
tools/scc/: CMakeLists.txt  scc.cpp
tools/sceq/: CMakeLists.txt  sceq.cpp
tools/scs2tgf/: CMakeLists.txt  list.h  main.c  map.c  map.h  misc.c  misc.h  parser.h  parser.y  parser_func.c  scanner.lex  sctext.c  sctext.h  values.h
(+294 files in other folders)
