
project(ext_dynmod_example)

cmake_minimum_required(VERSION 2.6)

set(SRCS cpp/ext_dynmod.cpp)

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${LIBSC_INCLUDE_DIR} ${LIBTGF_INCLUDE_DIR} ${LIBSYS_INCLUDE_DIR} ${LIBPM_INCLUDE_DIR})
add_library(ext_dynmod SHARED ${SRCS})
target_link_libraries(ext_dynmod libtgf libsc libpm)

# Configure the template file
if(MSVC)
	file(TO_NATIVE_PATH "${LIBTGF_BINARY_DIR}\\$(OutDir)" LIBTGF_BINARY_DIR_NATIVE)
	file(TO_NATIVE_PATH "${LIBSC_BINARY_DIR}\\$(OutDir)" LIBSC_BINARY_DIR_NATIVE)
	file(TO_NATIVE_PATH "${LIBSYS_BINARY_DIR}\\$(OutDir)" LIBSYS_BINARY_DIR_NATIVE)
	file(TO_NATIVE_PATH "${LIBPM_BINARY_DIR}\\$(OutDir)" LIBPM_BINARY_DIR_NATIVE)
	file(TO_NATIVE_PATH "${CMAKE_CURRENT_BINARY_DIR}\\$(OutDir)" EXT_DYNMOD_BINARY_DIR_NATIVE)
	file(TO_NATIVE_PATH "${LIBRGP_BINARY_DIR}\\$(OutDir)" LIBRGP_BINARY_DIR_NATIVE)

	set(USERFILE_ENVIRONMENT "PATH=${LIBTGF_BINARY_DIR_NATIVE};${LIBSC_BINARY_DIR_NATIVE};${LIBSYS_BINARY_DIR_NATIVE};${LIBPM_BINARY_DIR_NATIVE};${EXT_DYNMOD_BINARY_DIR_NATIVE};${LIBRGP_BINARY_DIR_NATIVE}")
	set(USERFILE_ENVIRONMENT_DEBUG ${USERFILE_ENVIRONMENT})
	set(USERFILE_ENVIRONMENT_RELEASE ${USERFILE_ENVIRONMENT})
	set(USERFILE_ENVIRONMENT_MINSIZEREL ${USERFILE_ENVIRONMENT})
	set(USERFILE_ENVIRONMENT_RELWITHDEBINFO ${USERFILE_ENVIRONMENT})
	set(USERFILE_PLATFORM "Win32")

	configure_user_template(ext_dynmod)
endif()

set(EXAMPLE_LIB_DIR "../../lib")
set(EXAMPLE_INCLUDE_DIR "../../include")
set(EXAMPLE_LIBSC_INCLUDE_DIR "${EXAMPLE_INCLUDE_DIR}/libsc")
set(EXAMPLE_LIBTGF_INCLUDE_DIR "${EXAMPLE_INCLUDE_DIR}/libtgf")
set(EXAMPLE_LIBSYS_INCLUDE_DIR "${EXAMPLE_INCLUDE_DIR}/libsys")
set(EXAMPLE_LIBPM_INCLUDE_DIR "${EXAMPLE_INCLUDE_DIR}/libpm")
configure_file(CMakeLists.txt.in ${CMAKE_CURRENT_BINARY_DIR}/CMakeLists.txt @ONLY)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/CMakeLists.txt
	DESTINATION examples/ext_dynmod
)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cpp
	DESTINATION examples/ext_dynmod
	PATTERN ".*" EXCLUDE
)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/sc
	DESTINATION examples/ext_dynmod
	PATTERN ".*" EXCLUDE
)
