
project(sceq CXX)

cmake_minimum_required(VERSION 2.6)

include_directories(${LIBTGF_INCLUDE_DIR} ${LIBSC_INCLUDE_DIR} ${LIBPM_INCLUDE_DIR} ${LIBSYS_INCLUDE_DIR} ${TCLAP_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(sceq sceq.cpp)
target_link_libraries(sceq libpm libsc)

# Configure the template file
if(MSVC)
    file(TO_NATIVE_PATH "${LIBTGF_BINARY_DIR}\\$(OutDir)" LIBTGF_BINARY_DIR_NATIVE)
    file(TO_NATIVE_PATH "${LIBSC_BINARY_DIR}\\$(OutDir)" LIBSC_BINARY_DIR_NATIVE)
    file(TO_NATIVE_PATH "${LIBPM_BINARY_DIR}\\$(OutDir)" LIBPM_BINARY_DIR_NATIVE)
    file(TO_NATIVE_PATH "${LIBSYS_BINARY_DIR}\\$(OutDir)" LIBSYS_BINARY_DIR_NATIVE)
    set(USERFILE_ENVIRONMENT "PATH=${LIBTGF_BINARY_DIR_NATIVE};${LIBSC_BINARY_DIR_NATIVE};${LIBSYS_BINARY_DIR_NATIVE};${LIBPM_BINARY_DIR_NATIVE}")
    set(USERFILE_ENVIRONMENT_DEBUG ${USERFILE_ENVIRONMENT})
    set(USERFILE_ENVIRONMENT_RELEASE ${USERFILE_ENVIRONMENT})
    set(USERFILE_ENVIRONMENT_MINSIZEREL ${USERFILE_ENVIRONMENT})
    set(USERFILE_ENVIRONMENT_RELWITHDEBINFO ${USERFILE_ENVIRONMENT})
    set(USERFILE_PLATFORM "Win32")
    
    configure_user_template(sceq)
endif()

install_target(sceq)
